--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Set the default behavior, in case people don't have core.autocrlf set.
-* text=auto
+* text=lf
 
 # Explicitly declare text files you want to always be normalized and converted
 # to native line endings on checkout.
@@ -9,6 +9,7 @@
 *.c		text eol=lf
 *.h		text eol=lf
 *.sh	text eol=lf
+*.md	text eol=crlf
 
 # Declare files that will always have CRLF line endings on checkout.
 *.sln	text eol=crlf
